k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-mecanica-ingress
  namespace: fiap-mecanica
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_ME
spec:
  ingressClassName: alb
  rules:
    - host: api-hmg.fiap-mecanica.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-mecanica-service
                port:
                  number: 80
